--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -498,7 +498,7 @@ height: 10rem
 
 #seed, #sunflower, #conversations, #gloves, #watering-can{
     display: block;
-    position: relative;
+    position: absolute;
     margin: auto;
     padding-bottom: 0.4rem;
     scale: 90%;
