--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -179,8 +179,9 @@ body{
     min-width: 100vw;
 }
 .wrapper{
-    margin-right: 1.2rem;
-        margin-left: 1.2rem;
+    margin: auto;
+    padding-left: 5px;
+    padding-right: 5px;
     min-width: 100vw;
     min-height: 100vh;
 }
