--- a/mobile_styles.css
+++ b/mobile_styles.css
@@ -436,10 +436,10 @@ white-space: nowrap;
     box-sizing: border-box;
     display: grid;
     grid-template-columns: 50% 50%;    
-    grid-template-rows: 10rem 10rem 10rem;
+    grid-template-rows: 24% 24% 24%;
 position: absolute;
    right: 0;
-  top: 8rem;
+  top: 7rem;
 width: 100vw;
 height: 40rem;
 overflow: auto;
