--- a/desktop_styles.css
+++ b/desktop_styles.css
@@ -167,6 +167,28 @@
 }
 
 
+@font-face {
+    font-family: 'xanh_monoitalic';
+    src: url('xanhmono-italic-webfont.woff2') format('woff2'),
+         url('xanhmono-italic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+@font-face {
+    font-family: 'xanh_monoregular';
+    src: url('xanhmono-regular-webfont.woff2') format('woff2'),
+         url('xanhmono-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
 *{     margin: 0;
     }
 
@@ -209,7 +231,7 @@ border-color: rgb(27, 160, 27);
     border: none;
     outline: none;
     background-color: #ffffff;
-    font-family: 'Xanh Mono', monospace;
+    font-family: 'xanh_monoregular', monospace;
 font-size: 15px;
 line-height: 19px;
 position: relative;    
@@ -224,7 +246,7 @@ margin-right: 1rem;
     border: none;
     outline: none;
     background-color: #ffffff;
-    font-family: 'Xanh Mono', monospace;
+    font-family: 'xanh_monoregular', monospace;
 font-size: 15px;
 line-height: 19px;
 position: relative;    
@@ -779,7 +801,7 @@ border-top: 1px, solid;
 
 
 #text-prompt, #text-prompt-2{
-    font-family: 'Xanh Mono', monospace;
+    font-family: 'xanh_monoregular', monospace;
     font-style: normal;
     text-align: center;
     padding-top: 10px;
@@ -1197,7 +1219,7 @@ text-align: left;
 .bio-1{
     display: block;
     position: relative;
-    font-family: 'Xanh Mono', monospace;
+    font-family: 'xanh_monoregular', monospace;
     font-size: 25px;
 padding-top: 15rem;    
 padding-bottom: 15rem;
@@ -1206,7 +1228,7 @@ width: 55%;
 }
 
 .bio-1 i{
-    font-family: 'Xanh Mono', monospace;
+    font-family: 'xanh_monoregular', monospace;
     font-style: italic;
     font-size: 25px; 
 }
@@ -1404,7 +1426,7 @@ top: -11rem;
 
   .genre{
     display: inline-block;
-    font-family: 'Xanh Mono', monospace;
+    font-family: 'xanh_monoitalic', monospace;
 font-size: 14px;
 line-height: 19px;
 position: relative;    
