--- a/desktop_styles.css
+++ b/desktop_styles.css
@@ -1184,6 +1184,8 @@ font-weight: 400;
 color: #000000;
 font-size: 28px;
 padding-top: 10rem;
+        width: 70vw;
+
 }
 
 .line-1{
@@ -1199,7 +1201,7 @@ padding-top: 10rem;
 .tags{
     position: relative;
 top: 8rem;
-left: -62.7rem;
+left: -63.7rem;
 padding-bottom: 2rem;
 text-align: left;
 }
@@ -1214,8 +1216,10 @@ text-align: left;
     margin: auto;
     padding-top: 10rem;
     padding-bottom: 10rem;
-    padding-left: 10rem;
+    left: -4rem;
+    width: 70vw;
 }
+
 .bio-1{
     display: block;
     position: relative;
