--- a/desktop_styles.css
+++ b/desktop_styles.css
@@ -188,7 +188,6 @@
 
 }
 
-
 *{     margin: 0;
     }
 
@@ -201,6 +200,9 @@ html{
     width: 100vw;
 }
 
+.desktop-overflow{
+overflow: hidden;
+}
 
 /* unvisited link */
 a:link {
@@ -221,42 +223,6 @@ border-color: rgb(27, 160, 27);
     text-decoration: none;
   }
 
-  #button-1:focus, #button-2:focus, #button-3:focus, #button-4:focus, #button-5:focus, #button-6:focus, #button-7:focus, #button-8:focus, #button-9:focus, #button-10:focus, #button-11:focus{
-  color: rgb(27, 160, 27);
-border-color: rgb(27, 160, 27);
-
-}
-
-.btn {
-    border: none;
-    outline: none;
-    background-color: #ffffff;
-    font-family: 'xanh_monoregular', monospace;
-font-size: 15px;
-line-height: 19px;
-position: relative;    
-border: 1px solid #000000;
-border-radius: 2rem;
-padding: 10px;
-margin-top: 0.5rem ;
-margin-right: 1rem;
-  }
-
-  .btn.active{
-    border: none;
-    outline: none;
-    background-color: #ffffff;
-    font-family: 'xanh_monoregular', monospace;
-font-size: 15px;
-line-height: 19px;
-position: relative;    
-border: 1px solid #0008CE;
-border-radius: 2rem;
-padding: 10px;
-margin-top: 0.5rem ;
-margin-right: 1rem;
-    color: #0008CE;
-  }
 
 .title {
     margin-left: 30px;
@@ -282,8 +248,8 @@ float: left;
     font-family: 'Goozette';
     font-style: normal;
     font-weight: 400;
-    font-size: 50px;
-    width: 70%
+    font-size: 40px;
+    width: 90%
 }
 
 h2 {
@@ -331,503 +297,35 @@ font-size: 20px;
 line-height: 2rem;
 }
 
-/* GENERATIVE HEADER ANIMATIONS*/
-
-.header-text-gardens{
-position: relative;
-margin: auto;
-padding-top: 4.5rem;
-}
-  
-#header-text-gardens {
-position: relative;
-padding-left: 18px;
-font-family: 'Goozette';
-font-style: normal;
-font-weight: 400;
-font-size: 70px;
-line-height: 101%;
-letter-spacing: -0.045em;
-color: rgba(255, 255, 255, 0);
--webkit-text-stroke: 1px black;
-}
-
-.marquee {
-    height: 30px;
-    top: 0;
-    position: absolute;
-    background: #000000;
-    color: #ffffff;
-    width: 100vw;
-}
-
-.marquee p {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    margin: auto;
-    font-family: 'JetBrains Mono', monospace;
-     font-style: normal;
-      text-align: left;
-      font-weight: 400;
-      font-size: 12px; 
-    text-align: left;
-    white-space: nowrap;
-    will-change: transform;
-    animation: scroll 15s linear infinite;
-    animation-direction: reverse;  
-    overflow: visible;
-}
-
-
-@keyframes scroll {
-    from { transform: translateX(0); }
-    to { transform: translateX(calc(-55% - 1rem)); }
-  }
-
-
-.marquee-bottom{
-    display: block;
-    box-sizing: border-box;
-    position: absolute;
-    bottom: 0;
-    background: rgb(255, 255, 255);
-    border: #000000 1px solid;
-    margin: auto;
-    height: 50px;
-    width: 100vw;
-    }
-    
-    .marquee-bottom p{
-    font-family: 'Goozette';
-    font-style: normal;
-    font-weight: 400;  
-    color: #000000;
-    font-size: 22px;
-    padding: 0.6rem;
-    position: relative;
-    margin: auto;
-    white-space: nowrap;
-      will-change: transform;
-      animation: scroll 15s linear infinite;
-      overflow: visible;
-    }
-    
-    @keyframes scroll {
-        from { transform: translateX(0); }
-        to { transform: translateX(calc(-66% ));
-         }
-      }
-
-#blob-container{
-   margin: auto;
-   position: relative;
-   width: 100vw;
-   height: 100vh;
-}
-
-.about-mobile{
-    display: block;
-    width: 20vw;
-    height: 3rem;
-    position: absolute;
-    margin: auto;
-    padding-bottom: 5px;
-    bottom: 4rem;
-    right: 2rem;
-    border: #000000 1px solid;
-    background-color: #8bee84;
-    border-radius: 5rem;
-}
-
-.about-mobile p{
-    margin: auto;
-    padding-top: 1rem;
-    position: relative;
-    text-align: center;
-    font-family: 'Goozette', sans-serif;
-    font-size: 1.3rem;
-    line-height: 1.7rem;
-    color: #000000;
-}
-
-.acknowledgement{
-    display: block;
-    width: 20vw;
-    height: 3rem;
-    position: absolute;
-    margin: auto;
-    padding-bottom: 5px;
-    bottom: 4rem;
-    left: 2rem;
-    border: #000000 1px solid;
-    background-color: #84ccee;
-    border-radius: 5rem;    
-}
-
-.acknowledgement p{
-    margin: auto;
-    padding-top: 1rem;
-    position: relative;
-    text-align: center;
-    font-family: 'Goozette', sans-serif;
-    font-size: 1.3rem;
-    line-height: 1.7rem;
-    color: #000000;
-}
-
-.title-1 sub, .title-2 sub, .title-3 sub, .title-4 sub, .title-5 sub{
-    font-family: 'JetBrains Mono', monospace;
-    font-style: normal;
-    font-weight: 500;
-    text-align: left;
-    position: relative;
-    margin: auto;
-    top: 1rem;
-    left: -3rem;
-    font-size: 14px; 
-    width: 55%;
-    float: right;
-}
-
-
-
-.title-1{
-    position: absolute;
-    margin: auto;
-    left: 10vw;
-    top: 50vh;
-z-index: 1;
-}
-
-.desc-1, .desc-2, .desc-3, .desc-4, .desc-5{
-    display: none;
-    width: 15rem;
-}
-
-.title-1:hover + .desc-1{
-    display: block;
-    box-sizing: border-box;
-    font-family: 'JetBrains Mono', monospace;
-    font-style: normal;
-    font-weight: 400;
-    text-align: left;
-    font-size: 14px;
-    position: absolute;
-    margin: auto;
-    box-sizing: border-box;
-    left: 17.7vw;
-    top: 58vh;
-    z-index: 1;
-}
-
-#seed{
-    display: block;
-    position: relative;
-    float: left;
-}
-
-.title-2{
-    position: absolute;
-    top: 20vh;
-    left: 40vw;
-    z-index: 1;
-}
-
-.title-2 sub{
-    top: -4rem;
-    padding-left: 9rem;
-}
-
-.title-2:hover + .desc-2{
-    display: block;
-    box-sizing: border-box;
-    font-family: 'JetBrains Mono', monospace;
-    font-style: normal;
-    font-weight: 400;
-    text-align: left;
-    font-size: 14px;
-    position: absolute;
-    margin: auto;
-    box-sizing: border-box;
-    top: 31vh;
-    left: 47.7vw;
-    z-index: 1;
-}
-
-#sunflower{
-    position: relative;
-    float: left;
-    z-index: 1;
-}
-
-.title-3{
-    position: absolute;
-    top: 32rem;
-    left: 33rem;
-z-index: 1}
-
-.title-3 sub{
-    top: -4rem;
-    padding-left: 8rem;
-}
-
-.title-3:hover + .desc-3{
-    display: block;
-    box-sizing: border-box;
-    font-family: 'JetBrains Mono', monospace;
-    font-style: normal;
-    font-weight: 400;
-    text-align: left;
-    font-size: 14px;
-    position: absolute;
-    margin: auto;
-    box-sizing: border-box;
-    left: 40.8rem;
-    top: 37rem;
-    z-index: 1;
-}
-
-#conversations{
-    position: relative;
-    float: left;
-    z-index: 1;
-}
-    .title-4{
-        position: absolute;
-        top: 30vh;
-        left: 65vw;
-    z-index: 1;
-}
-
-.title-4 sub{
-    padding-left: 3rem;
-}
-
-.title-4:hover + .desc-4{
-    display: block;
-    box-sizing: border-box;
-    font-family: 'JetBrains Mono', monospace;
-    font-style: normal;
-    font-weight: 400;
-    text-align: left;
-    font-size: 14px;
-    position: absolute;
-    margin: auto;
-    box-sizing: border-box;
-    left: 73vw;
-    top: 38vh;
-    z-index: 1;
-}
-
-#gloves{
-    position: relative;
-    float: left;
-    z-index: 1;
-}
-
-        .title-5{
-        position: absolute;
-        top: 57vh;
-        left: 70vw;
-        z-index: 1;
-        width: 500px
-    }
-
-    .title-5 sub{
-        left: -6rem;
-        padding-top: 1rem;
-    }
-
-    .title-5:hover + .desc-5{
-        display: block;
-        box-sizing: border-box;
-        font-family: 'JetBrains Mono', monospace;
-        font-style: normal;
-        font-weight: 400;
-        text-align: left;
-        font-size: 14px;
-        position: absolute;
-        margin: auto;
-        box-sizing: border-box;
-        left: 79vw;
-        top: 65vh;
-        z-index: 1;
-    }
-
-#watering-can{
-    position: relative;
-    float: left;
-    z-index: 1;
-}
-
 
 .nav-landing{
-   rotate: -90deg;
-   position: fixed;
-   display: block;
-   box-sizing: border-box;
-   top: 45vh;
-  left: -48vw;
-   width: 100vw;
-   border: #000000 1px solid;
-   padding-top: 0.8rem;
-}
-
-
-.nav-landing h1{
-margin: auto;
-text-align: center;
-font-size: 30px;
-padding-bottom: 1rem;
-z-index: 1;
-width: 100vw;
-
-}
-
-.nav-landing h1:hover{
+    rotate: -90deg;
+    position: fixed;
+    display: block;
+    box-sizing: border-box;
+    top: 45vh;
+    left: -48vw;
+    width: 100vw;
+    border: #000000 1px solid;
+    padding-top: 0.8rem;
+    }
+    
+    
+    .nav-landing h1{
+    margin: auto;
+    text-align: center;
+    font-size: 30px;
+    padding-bottom: 1rem;
+    z-index: 1;
+    width: 100vw;
+    
+    }
+    
+    .nav-landing h1:hover{
     color:#000000;
     background-color: #8bee84;
-
-}
-
-
-/* buttons */
-.plant-keyboard-box {
-position: fixed;
-box-sizing: border-box;
-width: 50vw;
-display: block;
-border: 1px solid;
-bottom: 0;
-left: 0;
-align-content: center;
-padding-bottom: 10px ;
-z-index: 2;
-background-color: rgba(255, 255, 255, 0.7);
-}
-
-.dropbtn1 {
-    font-family: 'Goozette', sans-serif;
-    font-style: normal;
-    color: black;
-    text-align: center;
-    padding-top: 10px;
-    padding-bottom: 5px;
-    font-weight: 300;
-    font-size: 30px;
-    line-height: 1.7rem;
-    letter-spacing: 2px;
-    padding-top: 2rem;
-    cursor: pointer;
-    background: none;
-    border: none;
-    margin: auto;
-    display: block;
-}
-
-.grow-keyboard-box {
-    position: fixed;
-    box-sizing: border-box;
-    width: 50vw;
-    display: block;
-    border: 1px solid;
-    bottom: 0;
-    right: 0;
-    align-content: center;
-    padding-bottom: 10px ;
-    z-index: 2;
-    background-color: rgba(255, 255, 255, 0.3);
+    
     }
-
-.dropbtn2 {
-    font-family: 'Goozette', sans-serif;
-    font-style: normal;
-    color: black;
-    text-align: center;
-    padding-top: 10px;
-    padding-bottom: 5px;
-    font-weight: 300;
-    font-size: 30px;
-    line-height: 1.7rem;
-    letter-spacing: 2px;
-    padding-top: 2rem;
-    cursor: pointer;
-    background: none;
-    border: none;
-    margin: auto;
-    display: block;
-}
-
-.grow-button-close{
-    position: fixed;
-    box-sizing: border-box;
-    width: 50vw;
-    display: block;
-    border: 1px solid;
-    bottom: 0;
-    right: 0;
-    align-content: center;
-    padding-bottom: 10px ;
-    z-index: 2;
-}
-.grow-button-close:hover{
-    background-color: black;
-}
-
-.dropbtn2:hover {
-        color: white;
-}
-
-.dropbtn2:active{
-    color:white;
-}
-#myDropup {
-    transform: translateY(-0%);
-}
-.dropup-content{
-    padding-bottom: 1rem;
-    display: none;
-}
-
-.dropbtn1:hover .dropbtn1:focus .dropup-content
-{
-    display: block;
-border-top: 1px, solid;
-}
-
-.show {display:block;
-}
-
-
-#text-prompt, #text-prompt-2{
-    font-family: 'xanh_monoregular', monospace;
-    font-style: normal;
-    text-align: center;
-    padding-top: 10px;
-    padding-bottom: 5px;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 1.7rem;
-}
-
-
-
-#myDropup2 {
-    transform: translateY(-0%);
-}
-.dropup-content-2{
-    padding-bottom: 1rem;
-    display: none;
-}
-
-.dropbtn2:hover .dropbtn2:focus .dropup-content-2{
-    display: block;
-    border-top: 1px, solid;
-}
-
-.show {display:block;
-}
 
 .page-header{
     position: fixed;
@@ -1071,8 +569,43 @@ flex-wrap: wrap;
     height: 27rem;
     margin-bottom: 1rem;
     margin-right: 1rem;
+    display: none;
 }
 
+.show {
+    display: block;
+  }
+
+.btn {
+    border: none;
+    outline: none;
+    background-color: #ffffff;
+    font-family: 'Xanh Mono', monospace;
+font-size: 15px;
+line-height: 19px;
+position: relative;    
+border: 1px solid #000000;
+border-radius: 2rem;
+padding: 10px;
+margin-top: 0.5rem ;
+margin-right: 1rem;
+  }
+
+  .btn.active{
+    border: none;
+    outline: none;
+    background-color: #ffffff;
+    font-family: 'Xanh Mono', monospace;
+font-size: 15px;
+line-height: 19px;
+position: relative;    
+border: 1px solid #0008CE;
+border-radius: 2rem;
+padding: 10px;
+margin-top: 0.5rem ;
+margin-right: 1rem;
+    color: #0008CE;
+  }
 
 .filterDiv h2{
     position: relative;
@@ -1177,20 +710,51 @@ margin-top: 1rem;
         }
     
 /* interview landing */
-.interview-1, .interview-2{
-    font-family: 'Goozette';
+.interview-1{
+    font-family: 'goozetteregular';
 font-style: normal;
-font-weight: 400;  
+font-weight: normal;  
 color: #000000;
 font-size: 28px;
-padding-top: 10rem;
-        width: 70vw;
+padding-top: 20rem;
+padding-left: 9rem;
+width: 50vw;
+}
 
+.interview-2{
+    font-family: 'goozetteregular';
+    font-style: normal;
+    font-weight: normal;  
+    color: #000000;
+    font-size: 28px;
+    padding-top: 12rem;
+    padding-left: 9rem;
+    width: 50vw;
+}
+.main-title{
+    padding-left: 8rem;
+}
+
+.main-title sub{
+    padding-left: 1rem;
+    top: -0.5rem;
+    float: left;
+    text-align: left;
+    font-size: 10px;
 }
 
 .line-1{
     position: absolute;
-    margin-top: 5rem ;
+    margin-top: 15rem ;
+ left: 0;
+    width: 100vw;
+    height: 1px;
+    background-color: #000000
+}
+
+.line-2{
+    position: absolute;
+    margin-top: 6rem ;
  left: 0;
     width: 100vw;
     height: 1px;
@@ -1219,11 +783,10 @@ text-align: left;
     left: -4rem;
     width: 70vw;
 }
-
 .bio-1{
     display: block;
     position: relative;
-    font-family: 'xanh_monoregular', monospace;
+    font-family: 'Xanh Mono', monospace;
     font-size: 25px;
 padding-top: 15rem;    
 padding-bottom: 15rem;
@@ -1232,7 +795,7 @@ width: 55%;
 }
 
 .bio-1 i{
-    font-family: 'xanh_monoregular', monospace;
+    font-family: 'Xanh Mono', monospace;
     font-style: italic;
     font-size: 25px; 
 }
@@ -1430,7 +993,7 @@ top: -11rem;
 
   .genre{
     display: inline-block;
-    font-family: 'xanh_monoregular', monospace;
+    font-family: 'Xanh Mono', monospace;
 font-size: 14px;
 line-height: 19px;
 position: relative;    
