--- a/desktop_styles.css
+++ b/desktop_styles.css
@@ -299,8 +299,9 @@ p{
 }
 
 sub{
-    font-family: 'jetbrainsmono_regular', monospace;
+    font-family: 'jetbrains_monoregular', monospace;
     font-style: normal;
+    font-weight: normal;
     text-align: left;
     font-size: 12px; 
 }
@@ -376,7 +377,7 @@ margin-top: 0.7rem;
     display: block;
     font-size: 9px;
     text-align: left;
-    font-family: 'jetbrainsmono_regular', monospace, bold;
+    font-family: 'jetbrains_monoregular', monospace;
     position: relative;
     margin: auto;
     margin-top: 1.3rem;
@@ -420,9 +421,8 @@ margin-top: 0.7rem;
 
 .initiatives sub{
     position: relative;
-     font-family: 'jetbrainsmono_regular', monospace;
+     font-family: 'jetbrains_monoregular', monospace;
     font-style: normal;
-    font-weight: 500;
     text-align: left;
     font-size: 14px; 
     padding-top: 15rem;
@@ -674,7 +674,7 @@ margin-right: 1rem;
     padding-top: 0.5rem;
     text-transform: uppercase;
     font-size: 9.5px;
-    font-family: 'jetbrainsmono_regular', monospace;
+    font-family: 'jetbrains_monoregular', monospace;
     width: 90%;
 }
 
@@ -692,7 +692,7 @@ margin-right: 1rem;
 
 
 .learnmore{
-font-family: 'jetbrainsmono_regular', monospace;
+font-family: 'jetbrains_monoregular', monospace;
 font-size: 10px;
 position: relative;
 padding-left: 1rem;
@@ -817,8 +817,8 @@ width: 50vw;
 /* interviews - tash and tian */
 .tags{
     position: relative;
-top: 8rem;
-padding-left: 10.5rem;
+top: 2rem;
+padding-left: 1rem;
 padding-bottom: 2rem;
 }
 
@@ -834,7 +834,7 @@ padding-bottom: 2rem;
     margin: auto;
     padding-top: 8rem;
     padding-bottom: 10rem;
-    left: -4rem;
+    left: -3rem;
     width: 70vw;
 }
 .interview-title-1 h1{
@@ -863,9 +863,8 @@ width: 8rem;
 position: relative;
 left: 10.5rem;
 display: block;
-font-family: 'jetbrainsmono_regular', monospace;
+font-family: 'jetbrains_monoregular', monospace;
     font-style: normal;
-    font-weight: 500;
     text-align: left;
     font-size: 12px; 
 }
@@ -1191,7 +1190,7 @@ padding-top: 1rem;
     padding-top: 1rem;
     padding-bottom: 5rem;
     position: relative;
-    left: -12rem;
+    left: -10rem;
 }
 .location sub{
   font-size: 12px;
@@ -1202,7 +1201,7 @@ text-align: left;
 #zinesjpg{
     position: relative;
     padding-top: 1rem;
-    padding-left: 11rem;
+    padding-left: 10rem;
     margin: auto;
     width: 60rem;
     height: 40rem;
